--- a/index.html
+++ b/index.html
@@ -17,4 +17,30 @@
           e o Alura Língua por um preço único.</h1>
           <img src="Combo.png" alt="0 combo+ é a junção do alura+ e o alura língua"
             class="container_imagem">
-            <
+            <a href="www.alura.com.br" class="container_botao">Assine por
+              12x de R$ 120,00"</a>
+        <a href="www.alura.com.br"> class="container_botao botao_secundario">Assinar
+          somente o Alura+</a>
+        <p class="container_aviso">"O preço pode variar caso a assinatura seja feita em outros
+          planos.</p>
+      </div>
+    </section>
+    <section class="container secundario">
+      <img src="Plataforma.png" alt="Um monitor
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
