--- a/index.html
+++ b/index.html
@@ -26,12 +26,36 @@
       </div>
     </section>
     <section class="container secundario">
-      <img src="Plataforma.png" alt="Um monitor
+      <img src="Plataforma.png" alt="Um monitor e um celular com a alura plus
+        aberta" class="secundario_imagem">
+      <div class="container_descrição">
+      <h2 class="descrição_titulo">Assista do seu jeito</h2>
+      <p class="descrição_texto">Aproveite a tela grande da Tv ou assista no
+        tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos 
+        não para de crescer.</p>
+      </div>
+    </section>
 
+    <section class="container secundario">
+      <div class="container_descrição">
+        <p class="descrição_texto">Só o Combo+ oferece Alura+ e Alura Língua
+          juntos para você ter acesso a cursos de diversas áreas da tecnologia
+          e aprender inglês ou espanhol, onde e como quiser. </p>
+        <a href="www.alura.com.br" class="container_botao secundario_botao" container>
+          Assine o Combo+</a>
+      </div>
+    <img src="Telas.png" alt="Tela do alura+ e alura língua" class="secundario_imagem">
+    </section>
 
-
-
-
+    <section class="container secundario">
+      <img src="Notebook.png" alt="Notebook com a página do curso HTML5
+        e CSS3 da Alura aberta" class="secundario_imagem">
+      <div class="container_descrição">
+        <h2 class="descrição_titulo">Baixe seus cursos</h2>
+        <p class="descrição_texto">Baixe e assista quando e onde quiser.
+          Assim
+        
+    
 
 
 
